<resources>
    <string name="app_name">BlackEagle</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="hint">Hint</string>
    <string name="dark_mode">Dark mode</string>
    <string name="daily_repetition_goal">Daily repetition goal</string>
    <string name="repetition_settings">Repetition</string>
    <string name="general_settings">General</string>
    <string name="show_answer">Show answer</string>
    <string name="show_hint">Show hint</string>
    <string name="your_decks">Your decks</string>
    <string name="convert_numbers">Convert numbers</string>
    <string name="settings">Settings</string>
    <string name="stats">Stats</string>
    <string name="about">About</string>
    <string name="add_card">Add card</string>
    <string name="start_study">Start study</string>
    <string name="favorite_study">Favorite study</string>
    <plurals name="card_count">
        <item quantity="one">%d Card</item>
        <item quantity="other">%d Cards</item>
    </plurals>
    <string name="card_answer">Answer: %1$s</string>
    <string name="card_question">Question: %1$s</string>
    <string name="edit_deck">Edit %1$s</string>
    <string name="card_number">%1$d</string>
    <string name="all">All</string>
    <string name="folders">Folders</string>
    <string name="favourites">Favourites</string>
    <string name="deck_to_add">What is the name of the deck?</string>
    <string name="add_deck">Add deck</string>
    <string name="delete">Delete</string>
    <string name="deck_header">Decks</string>
    <string name="add_card_header">Add Card</string>
    <string name="edit_convert_numbers_header">Edit numbers</string>
    <string name="convert_numbers_header">Convert Numbers</string>
    <string name="checkbox">Checkbox</string>
    <string name="select_multiple_decks">Select Multiple Decks</string>
    <string name="edit">Edit</string>
    <string name="edit_card">Edit Card</string>
    <string name="title_edit_number_word">What word should be associated with %1$d?</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="good">Good</string>
    <string name="hard">Difficult</string>
    <string name="easy">Easy</string>
    <string name="selectAll">Select all</string>
    <string name="select_all_cards">Select all cards</string>
    <string name="write_number">Write number</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="exportDeck">Export</string>
    <string name="importDeck">Import</string>
    <string name="convertTutorial1">Converting numbers is mainly used for remembering a sequence of numbers.
        Every number from 0–9 can be translated to a sound according to the table below.The sounds can then be used to create different words.</string>
    <string name="convertTutorial2Text1">When conversion of the number 123456789 takes place, the number is divided into numbers with 3 digits as in the picture below.
        Then the numbers are translated into a word sequence, in this case (Dynamo, Relish, Fabulous gaston).</string>
    <string name="convertTutorial2Text2">
        But if the length of the number is not divisible by 3, zeros will be added at the beginning of the number until it is divisible by 3.</string>
    <string name="closeSelect">Close</string>
    <string name="add_to_folder">Add to folder</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="more">More</string>
    <string name="edit_deck_name">Edit deck name</string>
    <string name="study">Study</string>
    <string name="show_html">Show HTML</string>
    <string name="add_folder">Add folder</string>
    <string name="folder_to_add">What is the name of the folder?</string>
    <string name="tutorial" translatable="false">Tutorial</string>
    <string name="card_position" translatable="false">#%d</string>
    <string name="error_field_empty">Field can not be empty</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="confirm_extra_study_title">Study extra</string>
    <string name="study_beforehand_question">There are no more cards scheduled for today. How many card do you want to study beforehand?</string>
    <string name="rename_folder">Rename folder</string>
    <string name="rename_folder_dialog_title">What is the new folder name?</string>
    <string name="edit_folder">Edit folder</string>
    <string name="no_cards_in_deck">There are currently no cards in this deck</string>
    <string name="folder_is_empty">Folder is currently empty</string>
    <string name="no_decks_outside_folder">There are no decks outside of this folder</string>
    <string name="reviews_last_7">Reviews the last seven days</string>
    <string name="date">Date</string>
    <string name="reviews">Reviews</string>
    <string name="insert_word">Insert words</string>
    <string name="insert_number">Insert number words</string>
    <string name="number_converter_dialog_title">Number converter</string>
    <string name="save_card">Save card</string>
    <string name="number_word_language">Language of number words</string>
    <string name="english">English</string>
    <string name="swedish">Swedish</string>
</resources>