<?xml version="1.0" encoding="utf-8"?>

<!--toolbar for cardListActivity-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/startStudy"
        android:title="@string/start_study"
        android:icon="@drawable/ic_start_study"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/favoriteStudy"
        android:title="@string/favorite_study"
        android:icon="@drawable/ic_favorite_study_border"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/exportDeck"
        android:title="@string/exportDeck"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/selectAllCards"
        android:title="@string/select_all_cards"
        android:icon="@drawable/ic_select_all"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/closeSelect"
        android:title="@string/closeSelect"
        android:icon="@drawable/ic_close_select"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>