<?xml version="1.0" encoding="utf-8"?>

<!--toolbar for card list-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/selectAll"
        android:title="@string/selectAll"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/importDeck"
        android:title="@string/importDeck"
        app:showAsAction="never"/>
    <item
        android:id="@+id/closeSelect"
        android:title="@string/closeSelect"
        android:icon="@drawable/ic_close_select"
        android:visible="false"
        app:showAsAction="ifRoom"/>
</menu>