<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/reset"
        android:title="@string/reset"
        android:icon="@drawable/ic_reset"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/selectAllNumbers"
        android:title="@string/selectAll"
        android:icon="@drawable/ic_select_all"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/closeSelect"
        android:title="@string/closeSelect"
        android:icon="@drawable/ic_close_select"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>


</menu>