<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteDeckButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exportButton" />

    <Button
        android:id="@+id/addToFolderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteDeckButton" />


    <Button
        android:id="@+id/addToFavouritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToFolderButton" />

    <Button
        android:id="@+id/editDeckNameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_deck_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addToFavouritesButton" />
</androidx.constraintlayout.widget.ConstraintLayout>