<?xml version="1.0" encoding="utf-8"?>
<!--settings-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <!--General settings-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/view_general_divider"
            android:textAppearance="@style/TextAppearance.BlackEagle.SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:background="?attr/colorOnBackground"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/view_general_divider"/>
    </RelativeLayout>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_mode_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/dark_mode"/>
    <!--Repetition settings-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/view_repetition_divider"
            android:textAppearance="@style/TextAppearance.BlackEagle.SettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetition_settings" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/view_repetition_divider"
            android:background="?attr/colorOnBackground" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_daily_repetition_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/daily_repetition_goal"/>

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>