<?xml version="1.0" encoding="utf-8"?>

<!--edit card-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/Layout">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/imageGuideLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />
        <!--Question-->
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6" />

        <ImageButton
            android:id="@+id/imageButtonQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideLine"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:srcCompat="@drawable/ic_photo" />

        <ImageView
            android:id="@+id/imageQuestion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLine"
            app:layout_constraintStart_toStartOf="@id/imageGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_question" />

        <!--Answer-->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageQuestion" />

        <EditText
            android:id="@+id/edit_text_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageButton
            android:id="@+id/imageButtonAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideLine"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/ic_photo" />

        <ImageView
            android:id="@+id/imageAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLine"
            app:layout_constraintStart_toStartOf="@id/imageGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_answer" />
        <!--Hint-->
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAnswer" />

        <EditText
            android:id="@+id/editTextHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageButton
            android:id="@+id/imageButtonHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/editTextHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideLine"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/ic_photo" />

        <ImageView
            android:id="@+id/imageHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideLine"
            app:layout_constraintStart_toStartOf="@id/imageGuideLine"
            app:layout_constraintTop_toBottomOf="@+id/editTextHint" />
        <!--button-->
        <Button
            android:id="@+id/button_add_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageHint"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="336dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>